formalisme api