@@ -2,14 +2,17 @@ package usmb.info803.profile_search.entreprise;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
-
 import java.util.List;
-
-import static java.util.stream.Collectors.toList;
 
 @RestController
 @RequestMapping("/api/entreprises")
@@ -23,49 +26,41 @@ public class EntrepriseController {
     }
     
 
-    @GetMapping(value = "/all")
+    @GetMapping(value = "/all", produces = MediaType.APPLICATION_JSON_VALUE)
     public List<Entreprise> entreprises(){
         logger.info("Get all entreprises");
         return entrepriseService.entreprises()
             .stream()
-            .collect(toList());
+            .toList();
     }
 
-    @GetMapping(value = "/{id}")
-    public Entreprise entreprise(@PathVariable("id") String id_s){
-        logger.info("Get entreprise by id : " + id_s);
-        long id = -1;
-        try {
-            id = Long.parseLong(id_s);
-        } catch (NumberFormatException e) {
-            logger.error("Invalid id : " + id_s);
-        }
-        if(id != -1){
-            return entrepriseService.entreprise(id);
-        }
-        return null;
+    @GetMapping(value = "/{id}", produces = MediaType.APPLICATION_JSON_VALUE)
+    public Entreprise entreprise(@PathVariable("id") long id){
+        logger.info(String.format("Get entreprise by id : %d", id));
+        return entrepriseService.entreprise(id);
     }
 
-    @GetMapping(value = "/delete/{id}")
-    public void delete(@PathVariable("id") String id_s){
-        logger.info("Delete entreprise by id : " + id_s);
-        long id = -1;
-        try {
-            id = Long.parseLong(id_s);
-            entrepriseService.delete(id);
-        } catch (NumberFormatException e) {
-            logger.error("Invalid id : " + id_s);
+    @DeleteMapping(value = "/delete/{id}", produces = MediaType.APPLICATION_JSON_VALUE)
+    public ResponseEntity<String> delete(@PathVariable("id") long id){
+        logger.info(String.format("Delete entreprise by id : %d", id));
+        if(!entrepriseService.delete(id)){
+            logger.error(String.format("Entreprise not found : %d", id));
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(String.format("Entreprise %d not found", id));
         }
-        if(id != -1){
-            entrepriseService.delete(id);
-        }
+        return ResponseEntity.ok(String.format("Entreprise %d deleted", id));
     }
 
-    @GetMapping(value = "/create/{name}")
-    public void create(@PathVariable("name") String name){
-        logger.info("Create entreprise with name : " + name);
-        if(!entrepriseService.create(name)) {
-            logger.error("Entreprise already exists : " + name);
+    @PostMapping(value = "/create", produces = MediaType.APPLICATION_JSON_VALUE)
+    public ResponseEntity<String> create(@RequestBody CreateEntrepriseBody req){
+        logger.info(String.format("Create entreprise with name : %s", req.getName()));
+        if(req.getName() == null || req.getName().isEmpty()) {
+            logger.error("Name is empty");
+            return ResponseEntity.badRequest().body("Name is empty");
         }
+        if(!entrepriseService.create(req.getName())) {
+            logger.error(String.format("Entreprise already exists : %s", req.getName()));
+            return ResponseEntity.badRequest().body(String.format("Entreprise %s already exists", req.getName()));
+        }
+        return ResponseEntity.ok(String.format("Entreprise %s created", req.getName()));
     }
 }
